@@ -1,3 +1,9 @@
+2010-08-25	Till Straumann <strauman@slac.stanford.edu>
+
+	PR 1689/bsps
+	* shared/flash/intelFlash.c: Scale erase timeout by actual
+	system clock rate rather than assuming a fixed value.
+
 2010-08-15	Joel Sherrill <joel.sherrilL@OARcorp.com>
 
 	* shared/console/polled_io.c: Add BSP_poll_char.
